bindings/bindings-swift/smpp_codec_ffiFFI.h

// ⚠️ Attention: If you change this #else block (ending in `#endif // def UNIFFI_SHARED_H`) you *must* ⚠️
// ⚠️ increment the version suffix in all instances of UNIFFI_SHARED_HEADER_V4 in this file.           ⚠️

typedef struct RustBuffer
{
    uint64_t capacity;
    uint64_t len;
    uint8_t *_Nullable data;
} RustBuffer;
typedef struct ForeignBytes
{
    int32_t len;
    const uint8_t *_Nullable data;
} ForeignBytes;
// Error definitions
typedef struct RustCallStatus {
    int8_t code;
    RustBuffer errorBuf;
} RustCallStatus;
typedef void (*UniffiRustFutureContinuationCallback)(uint64_t, int8_t
    );
RustBuffer uniffi_smpp_codec_ffi_fn_func_encode_broadcast_sm_response(RustBuffer response, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_smpp_codec_ffi_fn_func_encode_cancel_broadcast_sm_request(RustBuffer request, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_smpp_codec_ffi_fn_func_encode_cancel_broadcast_sm_response(RustBuffer response, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_smpp_codec_ffi_fn_func_encode_cancel_sm_request(RustBuffer request, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_smpp_codec_ffi_fn_func_encode_cancel_sm_response(RustBuffer response, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_smpp_codec_ffi_fn_func_encode_data_sm(RustBuffer request, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_smpp_codec_ffi_fn_func_encode_data_sm_response(RustBuffer response, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_smpp_codec_ffi_fn_func_encode_deliver_sm(RustBuffer request, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_smpp_codec_ffi_fn_func_encode_delivery_receipt(RustBuffer receipt, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_smpp_codec_ffi_fn_func_encode_delivery_sm_response(RustBuffer response, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_smpp_codec_ffi_fn_func_encode_enquire_link(RustBuffer req, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_smpp_codec_ffi_fn_func_encode_enquire_link_response(RustBuffer req, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_smpp_codec_ffi_fn_func_encode_generic_nack(RustBuffer req, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_smpp_codec_ffi_fn_func_encode_outbind(RustBuffer req, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_smpp_codec_ffi_fn_func_encode_query_broadcast_sm_request(RustBuffer request, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_smpp_codec_ffi_fn_func_encode_query_broadcast_sm_response(RustBuffer response, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_smpp_codec_ffi_fn_func_encode_query_sm_request(RustBuffer request, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_smpp_codec_ffi_fn_func_encode_query_sm_response(RustBuffer response, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_smpp_codec_ffi_fn_func_encode_replace_sm_request(RustBuffer request, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_smpp_codec_ffi_fn_func_encode_replace_sm_response(RustBuffer response, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_smpp_codec_ffi_fn_func_encode_submit_multi_request(RustBuffer request, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_smpp_codec_ffi_fn_func_encode_submit_multi_response(RustBuffer response, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_smpp_codec_ffi_fn_func_encode_submit_sm_request(RustBuffer request, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_smpp_codec_ffi_fn_func_encode_submit_sm_response(RustBuffer response, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_smpp_codec_ffi_fn_func_encode_unbind(RustBuffer req, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_smpp_codec_ffi_fn_func_encode_unbind_response(RustBuffer req, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_smpp_codec_ffi_fn_func_split_message(RustBuffer text, RustBuffer encoding, RustBuffer mode, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_smpp_codec_ffi_fn_func_tlv_decode(RustBuffer buffer, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_smpp_codec_ffi_fn_func_tlv_encode(RustBuffer tlv, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_smpp_codec_ffi_fn_func_tlv_new(uint16_t tag, RustBuffer value, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_smpp_codec_ffi_fn_func_tlv_new_from_name(RustBuffer name, RustBuffer value, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_smpp_codec_ffi_fn_func_tlv_new_payload(uint16_t tag, RustBuffer value, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_smpp_codec_ffi_fn_func_tlv_new_string(uint16_t tag, RustBuffer value, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_smpp_codec_ffi_fn_func_tlv_new_u16(uint16_t tag, uint16_t value, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_smpp_codec_ffi_fn_func_tlv_new_u16_from_name(RustBuffer name, uint16_t value, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_smpp_codec_ffi_fn_func_tlv_new_u8(uint16_t tag, uint8_t value, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_smpp_codec_ffi_fn_func_tlv_new_u8_from_name(RustBuffer name, uint8_t value, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_smpp_codec_ffi_fn_func_tlv_value_as_string(RustBuffer tlv, RustCallStatus *_Nonnull out_status
);
uint16_t uniffi_smpp_codec_ffi_fn_func_tlv_value_as_u16(RustBuffer tlv, RustCallStatus *_Nonnull out_status
);
uint8_t uniffi_smpp_codec_ffi_fn_func_tlv_value_as_u8(RustBuffer tlv, RustCallStatus *_Nonnull out_status
);
RustBuffer ffi_smpp_codec_ffi_rustbuffer_alloc(uint64_t size, RustCallStatus *_Nonnull out_status
);
RustBuffer ffi_smpp_codec_ffi_rustbuffer_from_bytes(ForeignBytes bytes, RustCallStatus *_Nonnull out_status
);
void ffi_smpp_codec_ffi_rustbuffer_free(RustBuffer buf, RustCallStatus *_Nonnull out_status
);
RustBuffer ffi_smpp_codec_ffi_rustbuffer_reserve(RustBuffer buf, uint64_t additional, RustCallStatus *_Nonnull out_status
);
void ffi_smpp_codec_ffi_rust_future_poll_u8(uint64_t handle, UniffiRustFutureContinuationCallback _Nonnull callback, uint64_t callback_data
);
void ffi_smpp_codec_ffi_rust_future_cancel_u8(uint64_t handle
);
void ffi_smpp_codec_ffi_rust_future_free_u8(uint64_t handle
);
uint8_t ffi_smpp_codec_ffi_rust_future_complete_u8(uint64_t handle, RustCallStatus *_Nonnull out_status
);
void ffi_smpp_codec_ffi_rust_future_poll_i8(uint64_t handle, UniffiRustFutureContinuationCallback _Nonnull callback, uint64_t callback_data
);
void ffi_smpp_codec_ffi_rust_future_cancel_i8(uint64_t handle
);
void ffi_smpp_codec_ffi_rust_future_free_i8(uint64_t handle
);
int8_t ffi_smpp_codec_ffi_rust_future_complete_i8(uint64_t handle, RustCallStatus *_Nonnull out_status
);
void ffi_smpp_codec_ffi_rust_future_poll_u16(uint64_t handle, UniffiRustFutureContinuationCallback _Nonnull callback, uint64_t callback_data
);