bindings/bindings-python/smpp_codec_ffi.py

    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_smpp_codec_ffi_fn_func_encode_broadcast_sm_response.restype = _UniffiRustBuffer
_UniffiLib.uniffi_smpp_codec_ffi_fn_func_encode_cancel_broadcast_sm_request.argtypes = (
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_smpp_codec_ffi_fn_func_encode_cancel_broadcast_sm_request.restype = _UniffiRustBuffer
_UniffiLib.uniffi_smpp_codec_ffi_fn_func_encode_cancel_broadcast_sm_response.argtypes = (
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_smpp_codec_ffi_fn_func_encode_cancel_broadcast_sm_response.restype = _UniffiRustBuffer
_UniffiLib.uniffi_smpp_codec_ffi_fn_func_encode_cancel_sm_request.argtypes = (
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_smpp_codec_ffi_fn_func_encode_cancel_sm_request.restype = _UniffiRustBuffer
_UniffiLib.uniffi_smpp_codec_ffi_fn_func_encode_cancel_sm_response.argtypes = (
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_smpp_codec_ffi_fn_func_encode_cancel_sm_response.restype = _UniffiRustBuffer
_UniffiLib.uniffi_smpp_codec_ffi_fn_func_encode_data_sm.argtypes = (
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_smpp_codec_ffi_fn_func_encode_data_sm.restype = _UniffiRustBuffer
_UniffiLib.uniffi_smpp_codec_ffi_fn_func_encode_data_sm_response.argtypes = (
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_smpp_codec_ffi_fn_func_encode_data_sm_response.restype = _UniffiRustBuffer
_UniffiLib.uniffi_smpp_codec_ffi_fn_func_encode_deliver_sm.argtypes = (
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_smpp_codec_ffi_fn_func_encode_deliver_sm.restype = _UniffiRustBuffer
_UniffiLib.uniffi_smpp_codec_ffi_fn_func_encode_delivery_receipt.argtypes = (
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_smpp_codec_ffi_fn_func_encode_delivery_receipt.restype = _UniffiRustBuffer
_UniffiLib.uniffi_smpp_codec_ffi_fn_func_encode_delivery_sm_response.argtypes = (
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_smpp_codec_ffi_fn_func_encode_delivery_sm_response.restype = _UniffiRustBuffer
_UniffiLib.uniffi_smpp_codec_ffi_fn_func_encode_enquire_link.argtypes = (
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_smpp_codec_ffi_fn_func_encode_enquire_link.restype = _UniffiRustBuffer
_UniffiLib.uniffi_smpp_codec_ffi_fn_func_encode_enquire_link_response.argtypes = (
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_smpp_codec_ffi_fn_func_encode_enquire_link_response.restype = _UniffiRustBuffer
_UniffiLib.uniffi_smpp_codec_ffi_fn_func_encode_generic_nack.argtypes = (
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_smpp_codec_ffi_fn_func_encode_generic_nack.restype = _UniffiRustBuffer
_UniffiLib.uniffi_smpp_codec_ffi_fn_func_encode_outbind.argtypes = (
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_smpp_codec_ffi_fn_func_encode_outbind.restype = _UniffiRustBuffer
_UniffiLib.uniffi_smpp_codec_ffi_fn_func_encode_query_broadcast_sm_request.argtypes = (
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_smpp_codec_ffi_fn_func_encode_query_broadcast_sm_request.restype = _UniffiRustBuffer
_UniffiLib.uniffi_smpp_codec_ffi_fn_func_encode_query_broadcast_sm_response.argtypes = (
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_smpp_codec_ffi_fn_func_encode_query_broadcast_sm_response.restype = _UniffiRustBuffer
_UniffiLib.uniffi_smpp_codec_ffi_fn_func_encode_query_sm_request.argtypes = (
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_smpp_codec_ffi_fn_func_encode_query_sm_request.restype = _UniffiRustBuffer
_UniffiLib.uniffi_smpp_codec_ffi_fn_func_encode_query_sm_response.argtypes = (
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_smpp_codec_ffi_fn_func_encode_query_sm_response.restype = _UniffiRustBuffer
_UniffiLib.uniffi_smpp_codec_ffi_fn_func_encode_replace_sm_request.argtypes = (
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_smpp_codec_ffi_fn_func_encode_replace_sm_request.restype = _UniffiRustBuffer
_UniffiLib.uniffi_smpp_codec_ffi_fn_func_encode_replace_sm_response.argtypes = (
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_smpp_codec_ffi_fn_func_encode_replace_sm_response.restype = _UniffiRustBuffer
_UniffiLib.uniffi_smpp_codec_ffi_fn_func_encode_submit_multi_request.argtypes = (
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_smpp_codec_ffi_fn_func_encode_submit_multi_request.restype = _UniffiRustBuffer
_UniffiLib.uniffi_smpp_codec_ffi_fn_func_encode_submit_multi_response.argtypes = (
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_smpp_codec_ffi_fn_func_encode_submit_multi_response.restype = _UniffiRustBuffer
_UniffiLib.uniffi_smpp_codec_ffi_fn_func_encode_submit_sm_request.argtypes = (
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_smpp_codec_ffi_fn_func_encode_submit_sm_request.restype = _UniffiRustBuffer
_UniffiLib.uniffi_smpp_codec_ffi_fn_func_encode_submit_sm_response.argtypes = (
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_smpp_codec_ffi_fn_func_encode_submit_sm_response.restype = _UniffiRustBuffer
_UniffiLib.uniffi_smpp_codec_ffi_fn_func_encode_unbind.argtypes = (
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_smpp_codec_ffi_fn_func_encode_unbind.restype = _UniffiRustBuffer
_UniffiLib.uniffi_smpp_codec_ffi_fn_func_encode_unbind_response.argtypes = (
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_smpp_codec_ffi_fn_func_encode_unbind_response.restype = _UniffiRustBuffer
_UniffiLib.uniffi_smpp_codec_ffi_fn_func_split_message.argtypes = (
    _UniffiRustBuffer,
    _UniffiRustBuffer,
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_smpp_codec_ffi_fn_func_split_message.restype = _UniffiRustBuffer
_UniffiLib.uniffi_smpp_codec_ffi_fn_func_tlv_decode.argtypes = (
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_smpp_codec_ffi_fn_func_tlv_decode.restype = _UniffiRustBuffer
_UniffiLib.uniffi_smpp_codec_ffi_fn_func_tlv_encode.argtypes = (
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_smpp_codec_ffi_fn_func_tlv_encode.restype = _UniffiRustBuffer
_UniffiLib.uniffi_smpp_codec_ffi_fn_func_tlv_new.argtypes = (
    ctypes.c_uint16,
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_smpp_codec_ffi_fn_func_tlv_new.restype = _UniffiRustBuffer
_UniffiLib.uniffi_smpp_codec_ffi_fn_func_tlv_new_from_name.argtypes = (
    _UniffiRustBuffer,
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_smpp_codec_ffi_fn_func_tlv_new_from_name.restype = _UniffiRustBuffer
_UniffiLib.uniffi_smpp_codec_ffi_fn_func_tlv_new_payload.argtypes = (
    ctypes.c_uint16,
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_smpp_codec_ffi_fn_func_tlv_new_payload.restype = _UniffiRustBuffer
_UniffiLib.uniffi_smpp_codec_ffi_fn_func_tlv_new_string.argtypes = (
    ctypes.c_uint16,
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_smpp_codec_ffi_fn_func_tlv_new_string.restype = _UniffiRustBuffer
_UniffiLib.uniffi_smpp_codec_ffi_fn_func_tlv_new_u16.argtypes = (
    ctypes.c_uint16,
    ctypes.c_uint16,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_smpp_codec_ffi_fn_func_tlv_new_u16.restype = _UniffiRustBuffer
_UniffiLib.uniffi_smpp_codec_ffi_fn_func_tlv_new_u16_from_name.argtypes = (
    _UniffiRustBuffer,
    ctypes.c_uint16,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_smpp_codec_ffi_fn_func_tlv_new_u16_from_name.restype = _UniffiRustBuffer
_UniffiLib.uniffi_smpp_codec_ffi_fn_func_tlv_new_u8.argtypes = (
    ctypes.c_uint16,
    ctypes.c_uint8,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_smpp_codec_ffi_fn_func_tlv_new_u8.restype = _UniffiRustBuffer
_UniffiLib.uniffi_smpp_codec_ffi_fn_func_tlv_new_u8_from_name.argtypes = (
    _UniffiRustBuffer,
    ctypes.c_uint8,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_smpp_codec_ffi_fn_func_tlv_new_u8_from_name.restype = _UniffiRustBuffer
_UniffiLib.uniffi_smpp_codec_ffi_fn_func_tlv_value_as_string.argtypes = (
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_smpp_codec_ffi_fn_func_tlv_value_as_string.restype = _UniffiRustBuffer
_UniffiLib.uniffi_smpp_codec_ffi_fn_func_tlv_value_as_u16.argtypes = (
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_smpp_codec_ffi_fn_func_tlv_value_as_u16.restype = ctypes.c_uint16
_UniffiLib.uniffi_smpp_codec_ffi_fn_func_tlv_value_as_u8.argtypes = (
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_smpp_codec_ffi_fn_func_tlv_value_as_u8.restype = ctypes.c_uint8
_UniffiLib.ffi_smpp_codec_ffi_rustbuffer_alloc.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.ffi_smpp_codec_ffi_rustbuffer_alloc.restype = _UniffiRustBuffer
_UniffiLib.ffi_smpp_codec_ffi_rustbuffer_from_bytes.argtypes = (
    _UniffiForeignBytes,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.ffi_smpp_codec_ffi_rustbuffer_from_bytes.restype = _UniffiRustBuffer
_UniffiLib.ffi_smpp_codec_ffi_rustbuffer_free.argtypes = (
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.ffi_smpp_codec_ffi_rustbuffer_free.restype = None
_UniffiLib.ffi_smpp_codec_ffi_rustbuffer_reserve.argtypes = (
    _UniffiRustBuffer,
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.ffi_smpp_codec_ffi_rustbuffer_reserve.restype = _UniffiRustBuffer
_UniffiLib.ffi_smpp_codec_ffi_rust_future_poll_u8.argtypes = (
    ctypes.c_uint64,
    _UNIFFI_RUST_FUTURE_CONTINUATION_CALLBACK,
    ctypes.c_uint64,
)
_UniffiLib.ffi_smpp_codec_ffi_rust_future_poll_u8.restype = None
_UniffiLib.ffi_smpp_codec_ffi_rust_future_cancel_u8.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_smpp_codec_ffi_rust_future_cancel_u8.restype = None
_UniffiLib.ffi_smpp_codec_ffi_rust_future_free_u8.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_smpp_codec_ffi_rust_future_free_u8.restype = None
_UniffiLib.ffi_smpp_codec_ffi_rust_future_complete_u8.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.ffi_smpp_codec_ffi_rust_future_complete_u8.restype = ctypes.c_uint8
_UniffiLib.ffi_smpp_codec_ffi_rust_future_poll_i8.argtypes = (
    ctypes.c_uint64,
    _UNIFFI_RUST_FUTURE_CONTINUATION_CALLBACK,
    ctypes.c_uint64,
)
_UniffiLib.ffi_smpp_codec_ffi_rust_future_poll_i8.restype = None
_UniffiLib.ffi_smpp_codec_ffi_rust_future_cancel_i8.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_smpp_codec_ffi_rust_future_cancel_i8.restype = None
_UniffiLib.ffi_smpp_codec_ffi_rust_future_free_i8.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_smpp_codec_ffi_rust_future_free_i8.restype = None
_UniffiLib.ffi_smpp_codec_ffi_rust_future_complete_i8.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.ffi_smpp_codec_ffi_rust_future_complete_i8.restype = ctypes.c_int8
_UniffiLib.ffi_smpp_codec_ffi_rust_future_poll_u16.argtypes = (
    ctypes.c_uint64,
    _UNIFFI_RUST_FUTURE_CONTINUATION_CALLBACK,
    ctypes.c_uint64,
)
